update Chinese traslation

--- a/content/translation/axolotl/chinese.json
+++ b/content/translation/axolotl/chinese.json
@@ -1,68 +1,119 @@
 {
-	"creatures.axolotl-creatures-pack.acpBabaYaga.name.plural" : "雅加婆婆",
-	"creatures.axolotl-creatures-pack.acpBabaYaga.name.singular" : "雅加婆婆",
-	"creatures.axolotl-creatures-pack.acpBrownie.name.plural" : "树桩骑士",
-	"creatures.axolotl-creatures-pack.acpBrownie.name.singular" : "树桩骑士",
-	"creatures.axolotl-creatures-pack.acpDrowner.name.plural" : "苔藓人",
-	"creatures.axolotl-creatures-pack.acpDrowner.name.singular" : "苔藓人",
-	"creatures.axolotl-creatures-pack.acpThug.name.plural" : "暴徒",
-	"creatures.axolotl-creatures-pack.acpThug.name.singular" : "暴徒",
-	"creatures.axolotl-creatures-pack.acpWilloWisp.name.plural" : "虚影",
-	"creatures.axolotl-creatures-pack.acpWilloWisp.name.singular" : "虚影",
-	"creatures.axolotl-creatures-pack.adventurer.name.plural" : "持盾者",
-	"creatures.axolotl-creatures-pack.adventurer.name.singular" : "持盾者",
-	"creatures.axolotl-creatures-pack.centamonthHunter.name.plural" : "猛犸猎手",
-	"creatures.axolotl-creatures-pack.centamonthHunter.name.singular" : "猛犸猎手",
-	"creatures.axolotl-creatures-pack.centamonthThrower.name.plural" : "猛犸投掷者",
-	"creatures.axolotl-creatures-pack.centamonthThrower.name.singular" : "猛犸投掷者",
-	"creatures.axolotl-creatures-pack.cockatriceHigh.name.plural" : "贪婪蛇鸡兽",
-	"creatures.axolotl-creatures-pack.cockatriceHigh.name.singular" : "贪婪蛇鸡兽",
-	"creatures.axolotl-creatures-pack.dragonFish.name.plural" : "海龙鱼",
-	"creatures.axolotl-creatures-pack.dragonFish.name.singular" : "海龙鱼",
-	"creatures.axolotl-creatures-pack.forestDragon.name.plural" : "森林幼龙",
-	"creatures.axolotl-creatures-pack.forestDragon.name.singular" : "森林幼龙",
-	"creatures.axolotl-creatures-pack.greatUrox.name.plural" : "大盘羊",
-	"creatures.axolotl-creatures-pack.greatUrox.name.singular" : "大盘羊",
-	"creatures.axolotl-creatures-pack.hillGiant.name.plural" : "山岭巨人",
-	"creatures.axolotl-creatures-pack.hillGiant.name.singular" : "山岭巨人",
-	"creatures.axolotl-creatures-pack.lionman.name.plural" : "狮头人",
-	"creatures.axolotl-creatures-pack.lionman.name.singular" : "狮头人",
-	"creatures.axolotl-creatures-pack.mountainGiant.name.plural" : "山峰巨人",
-	"creatures.axolotl-creatures-pack.mountainGiant.name.singular" : "山峰巨人",
-	"creatures.axolotl-creatures-pack.owlkin.name.plural" : "鸮",
-	"creatures.axolotl-creatures-pack.owlkin.name.singular" : "鸮",
-	"creatures.axolotl-creatures-pack.owlkinSage.name.plural" : "智鸮",
-	"creatures.axolotl-creatures-pack.owlkinSage.name.singular" : "智鸮",
-	"creatures.axolotl-creatures-pack.scorpohand.name.plural" : "巨蝎",
-	"creatures.axolotl-creatures-pack.scorpohand.name.singular" : "巨蝎",
-	"creatures.axolotl-creatures-pack.sellsword.name.plural" : "贩剑者",
-	"creatures.axolotl-creatures-pack.sellsword.name.singular" : "贩剑者",
-	"creatures.axolotl-creatures-pack.shadowLord.name.plural" : "暗影领主",
-	"creatures.axolotl-creatures-pack.shadowLord.name.singular" : "暗影领主",
-	"creatures.axolotl-creatures-pack.sphinx.name.plural" : "拉米亚",
-	"creatures.axolotl-creatures-pack.sphinx.name.singular" : "拉米亚",
-	"creatures.axolotl-creatures-pack.swampDragon.name.plural" : "沼泽幼龙",
-	"creatures.axolotl-creatures-pack.swampDragon.name.singular" : "沼泽幼龙",
-	"creatures.axolotl-creatures-pack.tentoslimus.name.plural" : "吞噬者",
-	"creatures.axolotl-creatures-pack.tentoslimus.name.singular" : "吞噬者",
-	"creatures.axolotl-creatures-pack.tortofroid.name.plural" : "甲蟾",
-	"creatures.axolotl-creatures-pack.tortofroid.name.singular" : "甲蟾",
-	"creatures.axolotl-creatures-pack.urox.name.plural" : "盘羊",
-	"creatures.axolotl-creatures-pack.urox.name.singular" : "盘羊",
-	"creatures.axolotl-creatures-pack.veninScorpohand.name.plural" : "毒巨蝎",
-	"creatures.axolotl-creatures-pack.veninScorpohand.name.singular" : "毒巨蝎",
-	"creatures.axolotl-creatures-pack.vileTortofroid.name.plural" : "污秽甲蟾",
-	"creatures.axolotl-creatures-pack.vileTortofroid.name.singular" : "污秽甲蟾",
-	"creatures.axolotl-creatures-pack.wyrmFish.name.plural" : "龙鱼",
-	"creatures.axolotl-creatures-pack.wyrmFish.name.singular" : "龙鱼",
-	"creatures.axolotl-creatures-pack.yeti.name.plural" : "雪怪",
-	"creatures.axolotl-creatures-pack.yeti.name.singular" : "雪怪",
-	"creatures.axolotl-creatures-pack.zombieHigh.name.plural" : "无赦尸",
-	"creatures.axolotl-creatures-pack.zombieHigh.name.singular" : "无赦尸",
-	"creatures.axolotl-creatures-pack.zombieLow.name.plural" : "怨灵尸",
-	"creatures.axolotl-creatures-pack.zombieLow.name.singular" : "怨灵尸",
-	"spell.axolotl-creatures-pack.acpDepletion.name" : "消耗",
-	"spell.axolotl-creatures-pack.degradation.name" : "降解",
-	"spell.axolotl-creatures-pack.fungus.name" : "真菌感染",
-	"spell.axolotl-creatures-pack.paraFungus.name" : "真菌寄生"
+    "creatures.axolotl-creatures-pack.acidicRoper.name.plural": "酸性藤蔓",
+    "creatures.axolotl-creatures-pack.acidicRoper.name.singular": "酸性藤蔓",
+    "creatures.axolotl-creatures-pack.acpBabaYaga.name.plural": "雅加婆婆",
+    "creatures.axolotl-creatures-pack.acpBabaYaga.name.singular": "雅加婆婆",
+    "creatures.axolotl-creatures-pack.acpBrownie.name.plural": "树桩骑士",
+    "creatures.axolotl-creatures-pack.acpBrownie.name.singular": "树桩骑士",
+    "creatures.axolotl-creatures-pack.acpDrowner.name.plural": "苔藓人",
+    "creatures.axolotl-creatures-pack.acpDrowner.name.singular": "苔藓人",
+    "creatures.axolotl-creatures-pack.acpThug.name.plural": "暴徒",
+    "creatures.axolotl-creatures-pack.acpThug.name.singular": "暴徒",
+    "creatures.axolotl-creatures-pack.acpWilloWisp.name.plural": "虚影",
+    "creatures.axolotl-creatures-pack.acpWilloWisp.name.singular": "虚影",
+    "creatures.axolotl-creatures-pack.adventurer.name.plural": "持盾者",
+    "creatures.axolotl-creatures-pack.adventurer.name.singular": "持盾者",
+    "creatures.axolotl-creatures-pack.centamonthHunter.name.plural": "猛犸猎手",
+    "creatures.axolotl-creatures-pack.centamonthHunter.name.singular": "猛犸猎手",
+    "creatures.axolotl-creatures-pack.centamonthThrower.name.plural": "猛犸投掷者",
+    "creatures.axolotl-creatures-pack.centamonthThrower.name.singular": "猛犸投掷者",
+    "creatures.axolotl-creatures-pack.cockatriceHigh.name.plural": "贪婪蛇鸡兽",
+    "creatures.axolotl-creatures-pack.cockatriceHigh.name.singular": "贪婪蛇鸡兽",
+    "creatures.axolotl-creatures-pack.dragonFish.name.plural": "海龙鱼",
+    "creatures.axolotl-creatures-pack.dragonFish.name.singular": "海龙鱼",
+    "creatures.axolotl-creatures-pack.evilTreant.name.plural": "邪恶树精",
+    "creatures.axolotl-creatures-pack.evilTreant.name.singular": "邪恶树精",
+    "creatures.axolotl-creatures-pack.evilTree.name.plural": "邪恶之树",
+    "creatures.axolotl-creatures-pack.evilTree.name.singular": "邪恶之树",
+    "creatures.axolotl-creatures-pack.forestDragon.name.plural": "森林幼龙",
+    "creatures.axolotl-creatures-pack.forestDragon.name.singular": "森林幼龙",
+    "creatures.axolotl-creatures-pack.greatUrox.name.plural": "大盘羊",
+    "creatures.axolotl-creatures-pack.greatUrox.name.singular": "大盘羊",
+    "creatures.axolotl-creatures-pack.hillGiant.name.plural": "山岭巨人",
+    "creatures.axolotl-creatures-pack.hillGiant.name.singular": "山岭巨人",
+    "creatures.axolotl-creatures-pack.hulkBuster.name.plural": "毁灭机甲",
+    "creatures.axolotl-creatures-pack.hulkBuster.name.singular": "毁灭机甲",
+    "creatures.axolotl-creatures-pack.ironclad.name.plural": "钢铁机甲",
+    "creatures.axolotl-creatures-pack.ironclad.name.singular": "钢铁机甲",
+    "creatures.axolotl-creatures-pack.kappa.name.plural": "河童",
+    "creatures.axolotl-creatures-pack.kappa.name.singular": "河童",
+    "creatures.axolotl-creatures-pack.kappaShoya.name.plural": "河伯",
+    "creatures.axolotl-creatures-pack.kappaShoya.name.singular": "河伯",
+    "creatures.axolotl-creatures-pack.lionman.name.plural": "狮头人",
+    "creatures.axolotl-creatures-pack.lionman.name.singular": "狮头人",
+    "creatures.axolotl-creatures-pack.mountainGiant.name.plural": "山峰巨人",
+    "creatures.axolotl-creatures-pack.mountainGiant.name.singular": "山峰巨人",
+    "creatures.axolotl-creatures-pack.owlkin.name.plural": "鸮",
+    "creatures.axolotl-creatures-pack.owlkin.name.singular": "鸮",
+    "creatures.axolotl-creatures-pack.owlkinSage.name.plural": "智鸮",
+    "creatures.axolotl-creatures-pack.owlkinSage.name.singular": "智鸮",
+    "creatures.axolotl-creatures-pack.roper.name.plural": "藤蔓",
+    "creatures.axolotl-creatures-pack.roper.name.singular": "藤蔓",
+    "creatures.axolotl-creatures-pack.scorpohand.name.plural": "巨蝎",
+    "creatures.axolotl-creatures-pack.scorpohand.name.singular": "巨蝎",
+    "creatures.axolotl-creatures-pack.sellsword.name.plural": "贩剑者",
+    "creatures.axolotl-creatures-pack.sellsword.name.singular": "贩剑者",
+    "creatures.axolotl-creatures-pack.serpentine.name.plural": "蛇蜥",
+    "creatures.axolotl-creatures-pack.serpentine.name.singular": "蛇蜥",
+    "creatures.axolotl-creatures-pack.serpentineAlpha.name.plural": "王蛇蜥",
+    "creatures.axolotl-creatures-pack.serpentineAlpha.name.singular": "王蛇蜥",
+    "creatures.axolotl-creatures-pack.shadowLord.name.plural": "暗影领主",
+    "creatures.axolotl-creatures-pack.shadowLord.name.singular": "暗影领主",
+    "creatures.axolotl-creatures-pack.sphinx.name.plural": "狮身人面像",
+    "creatures.axolotl-creatures-pack.sphinx.name.singular": "狮身人面像",
+    "creatures.axolotl-creatures-pack.stoneCollossus.name.plural": "岩石巨像",
+    "creatures.axolotl-creatures-pack.stoneCollossus.name.singular": "岩石巨像",
+    "creatures.axolotl-creatures-pack.stoneLord.name.plural": "巨石领主",
+    "creatures.axolotl-creatures-pack.stoneLord.name.singular": "巨石领主",
+    "creatures.axolotl-creatures-pack.swampDragon.name.plural": "沼泽幼龙",
+    "creatures.axolotl-creatures-pack.swampDragon.name.singular": "沼泽幼龙",
+    "creatures.axolotl-creatures-pack.tentoslimus.name.plural": "吞噬者",
+    "creatures.axolotl-creatures-pack.tentoslimus.name.singular": "吞噬者",
+    "creatures.axolotl-creatures-pack.tortofroid.name.plural": "甲蟾",
+    "creatures.axolotl-creatures-pack.tortofroid.name.singular": "甲蟾",
+    "creatures.axolotl-creatures-pack.urox.name.plural": "盘羊",
+    "creatures.axolotl-creatures-pack.urox.name.singular": "盘羊",
+    "creatures.axolotl-creatures-pack.veninScorpohand.name.plural": "毒巨蝎",
+    "creatures.axolotl-creatures-pack.veninScorpohand.name.singular": "毒巨蝎",
+    "creatures.axolotl-creatures-pack.vileTortofroid.name.plural": "污秽甲蟾",
+    "creatures.axolotl-creatures-pack.vileTortofroid.name.singular": "污秽甲蟾",
+    "creatures.axolotl-creatures-pack.wyrmFish.name.plural": "龙鱼",
+    "creatures.axolotl-creatures-pack.wyrmFish.name.singular": "龙鱼",
+    "creatures.axolotl-creatures-pack.yeti.name.plural": "雪怪",
+    "creatures.axolotl-creatures-pack.yeti.name.singular": "雪怪",
+    "creatures.axolotl-creatures-pack.zombieHigh.name.plural": "无赦尸",
+    "creatures.axolotl-creatures-pack.zombieHigh.name.singular": "无赦尸",
+    "creatures.axolotl-creatures-pack.zombieLow.name.plural": "怨灵尸",
+    "creatures.axolotl-creatures-pack.zombieLow.name.singular": "怨灵尸",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpAshTree.name": "白蜡树",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpButteExcavation.name": "丘陵谷地",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpCenotaph.name": "纪念碑",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpChalet.name": "木制农舍",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpCluster.name": "藤蔓丛",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpDarkPortal.name": "暗黑传送门",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpForsakenPond.name": "荒芜池塘",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpFrozenCavity.name": "冰封之洞",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpHutHensLeg.name": "鸡脚小屋",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpLostUshnu.name": "失落祭坛",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpMire.name": "泥潭",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpMurkyChasm,.name": "阴暗裂隙",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpNiveousLair.name": "皓白巢穴",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpQuaggyRelic.name": "沼地遗迹",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpRoughcastPlant.name": "钢坯铸造厂",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpRustyHabitation.name": "锈蚀居留地",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpShatteredGravestone.name": "破碎墓碑",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpSinfulWorkshop.name": "罪恶工坊",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpSordidPost.name": "卑鄙驿站",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpSparkyMeadow.name": "闪光草甸",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpSqualidNide.name": "污秽巢穴",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpTombOfRiddles.name": "谜语之墓",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpTupik.name": "兽皮帐篷",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpTurquoisePassage.name": "绿松石通道",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpViciousWorkshop.name": "恶毒工坊",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpblackAlder.name": "幽暗桤林",
+    "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpslimyBurrow.name": "黏滑地穴",
+    "spell.axolotl-creatures-pack.acpDepletion.name": "消耗",
+    "spell.axolotl-creatures-pack.degradation.name": "降解",
+    "spell.axolotl-creatures-pack.fungus.name": "真菌感染",
+    "spell.axolotl-creatures-pack.paraFungus.name": "真菌寄生"
 }
