Add Hobbit and remove Centamonth Thrower

--- a/content/translation/axolotl/chinese.json
+++ b/content/translation/axolotl/chinese.json
@@ -15,8 +15,6 @@
     "creatures.axolotl-creatures-pack.adventurer.name.singular": "持盾者",
     "creatures.axolotl-creatures-pack.centamonthHunter.name.plural": "猛犸猎手",
     "creatures.axolotl-creatures-pack.centamonthHunter.name.singular": "猛犸猎手",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.plural": "猛犸投掷者",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.singular": "猛犸投掷者",
     "creatures.axolotl-creatures-pack.cockatriceHigh.name.plural": "贪婪蛇鸡兽",
     "creatures.axolotl-creatures-pack.cockatriceHigh.name.singular": "贪婪蛇鸡兽",
     "creatures.axolotl-creatures-pack.dragonFish.name.plural": "海龙鱼",
@@ -31,6 +29,8 @@
     "creatures.axolotl-creatures-pack.greatUrox.name.singular": "大盘羊",
     "creatures.axolotl-creatures-pack.hillGiant.name.plural": "山岭巨人",
     "creatures.axolotl-creatures-pack.hillGiant.name.singular": "山岭巨人",
+    "creatures.axolotl-creatures-pack.hobbit.name.plural": "霍比特人",
+    "creatures.axolotl-creatures-pack.hobbit.name.singular": "霍比特人",
     "creatures.axolotl-creatures-pack.hulkBuster.name.plural": "毁灭机甲",
     "creatures.axolotl-creatures-pack.hulkBuster.name.singular": "毁灭机甲",
     "creatures.axolotl-creatures-pack.ironclad.name.plural": "钢铁机甲",
