--- a/content/translation/axolotl/german.json
+++ b/content/translation/axolotl/german.json
@@ -15,8 +15,6 @@
     "creatures.axolotl-creatures-pack.adventurer.name.singular": "Abenteurer",
     "creatures.axolotl-creatures-pack.centamonthHunter.name.plural": "Centamonat-Jäger",
     "creatures.axolotl-creatures-pack.centamonthHunter.name.singular": "Centamonat-Jäger",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.plural": "Centamonat-Werfer",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.singular": "Centamonat-Werfer",
     "creatures.axolotl-creatures-pack.cockatriceHigh.name.plural": "Gefräßige Coctatrices",
     "creatures.axolotl-creatures-pack.cockatriceHigh.name.singular": "Gefräßiger Coctatrice",
     "creatures.axolotl-creatures-pack.dragonFish.name.plural": "Drachenfische",
@@ -31,6 +29,8 @@
     "creatures.axolotl-creatures-pack.greatUrox.name.singular": "Großer Urox",
     "creatures.axolotl-creatures-pack.hillGiant.name.plural": "Hügel-Riesen",
     "creatures.axolotl-creatures-pack.hillGiant.name.singular": "Hügel-Riese",
+    "creatures.axolotl-creatures-pack.hobbit.name.plural": "Hobbits",
+    "creatures.axolotl-creatures-pack.hobbit.name.singular": "Hobbit",
     "creatures.axolotl-creatures-pack.hulkBuster.name.plural": "Hulkbusters",
     "creatures.axolotl-creatures-pack.hulkBuster.name.singular": "Hulkbuster",
     "creatures.axolotl-creatures-pack.ironclad.name.plural": "Eisenklötze",
