--- a/content/translation/axolotl/russian.json
+++ b/content/translation/axolotl/russian.json
@@ -114,6 +114,6 @@
     "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpslimyBurrow.name": "Слизистая пещера",
     "spell.axolotl-creatures-pack.acpDepletion.name": Истощение",
     "spell.axolotl-creatures-pack.degradation.name": "Деградация",
-    "spell.axolotl-creatures-pack.fungus.name": "Грибковая инфекция",
+    "spell.axolotl-creatures-pack.fungus.name": "Грибок",
     "spell.axolotl-creatures-pack.paraFungus.name": "Паразитический гриб"
 }
