--- a/content/translation/axolotl/russian.json
+++ b/content/translation/axolotl/russian.json
@@ -1,28 +1,28 @@
 {
-    "creatures.axolotl-creatures-pack.acidicRoper.name.plural": "Кислые канаты",
-    "creatures.axolotl-creatures-pack.acidicRoper.name.singular": "Кислый канат",
+    "creatures.axolotl-creatures-pack.acidicRoper.name.plural": "Кислотные канаты",
+    "creatures.axolotl-creatures-pack.acidicRoper.name.singular": "Кислотный канат",
     "creatures.axolotl-creatures-pack.acpBabaYaga.name.plural": "Лесные бабы",
     "creatures.axolotl-creatures-pack.acpBabaYaga.name.singular": "Лесная баба",
-    "creatures.axolotl-creatures-pack.acpBrownie.name.plural": "Бурые чихи",
-    "creatures.axolotl-creatures-pack.acpBrownie.name.singular": "Бурый чих",
-    "creatures.axolotl-creatures-pack.acpDrowner.name.plural": "Моховые рабы",
-    "creatures.axolotl-creatures-pack.acpDrowner.name.singular": "Моховый раб",
-    "creatures.axolotl-creatures-pack.acpThug.name.plural": "Преступники",
-    "creatures.axolotl-creatures-pack.acpThug.name.singular": "Преступник",
+    "creatures.axolotl-creatures-pack.acpBrownie.name.plural": "Домовые",
+    "creatures.axolotl-creatures-pack.acpBrownie.name.singular": "Домовой",
+    "creatures.axolotl-creatures-pack.acpDrowner.name.plural": "Утопцы",
+    "creatures.axolotl-creatures-pack.acpDrowner.name.singular": "Утопец",
+    "creatures.axolotl-creatures-pack.acpThug.name.plural": "Бандиты",
+    "creatures.axolotl-creatures-pack.acpThug.name.singular": "Бандит",
     "creatures.axolotl-creatures-pack.acpWilloWisp.name.plural": "Блуждающие огни",
     "creatures.axolotl-creatures-pack.acpWilloWisp.name.singular": "Блуждающий огонь",
     "creatures.axolotl-creatures-pack.adventurer.name.plural": "Искатели приключений",
     "creatures.axolotl-creatures-pack.adventurer.name.singular": "Искатель приключений",
-    "creatures.axolotl-creatures-pack.centamonthHunter.name.plural": "Центомонаты-охотники",
-    "creatures.axolotl-creatures-pack.centamonthHunter.name.singular": "Центомонат-охотник",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.plural": "Центомонаты-швыряльщики",
-    "creatures.axolotl-creatures-pack.centamonthThrower.name.singular": "Центомонат-швыряльщик",
-    "creatures.axolotl-creatures-pack.cockatriceHigh.name.plural": "Прожорливые коктатрисы",
-    "creatures.axolotl-creatures-pack.cockatriceHigh.name.singular": "Прожорливый коктатрис",
+    "creatures.axolotl-creatures-pack.centamonthHunter.name.plural": "Центомоны-охотники",
+    "creatures.axolotl-creatures-pack.centamonthHunter.name.singular": "Центомон-охотник",
+    "creatures.axolotl-creatures-pack.centamonthThrower.name.plural": "Центомоны-грабители",
+    "creatures.axolotl-creatures-pack.centamonthThrower.name.singular": "Центомон-грабитель",
+    "creatures.axolotl-creatures-pack.cockatriceHigh.name.plural": "Прожорливые кокатрисы",
+    "creatures.axolotl-creatures-pack.cockatriceHigh.name.singular": "Прожорливый кокатрис",
     "creatures.axolotl-creatures-pack.dragonFish.name.plural": "Рыбы-драконы",
     "creatures.axolotl-creatures-pack.dragonFish.name.singular": "Рыба-дракон",
-    "creatures.axolotl-creatures-pack.evilTreant.name.plural": "Злые древесные лианы",
-    "creatures.axolotl-creatures-pack.evilTreant.name.singular": "Злая древесная лиана",
+    "creatures.axolotl-creatures-pack.evilTreant.name.plural": "Злые древи",
+    "creatures.axolotl-creatures-pack.evilTreant.name.singular": "Злой древень",
     "creatures.axolotl-creatures-pack.evilTree.name.plural": "Злые деревья",
     "creatures.axolotl-creatures-pack.evilTree.name.singular": "Злое дерево",
     "creatures.axolotl-creatures-pack.forestDragon.name.plural": "Лесные драконы",
@@ -33,44 +33,44 @@
     "creatures.axolotl-creatures-pack.hillGiant.name.singular": "Холмовой гигант",
     "creatures.axolotl-creatures-pack.hulkBuster.name.plural": "Халкбастеры",
     "creatures.axolotl-creatures-pack.hulkBuster.name.singular": "Халкбастер",
-    "creatures.axolotl-creatures-pack.ironclad.name.plural": "Железные блоки",
-    "creatures.axolotl-creatures-pack.ironclad.name.singular": "Железный блок",
+    "creatures.axolotl-creatures-pack.ironclad.name.plural": "Броневики",
+    "creatures.axolotl-creatures-pack.ironclad.name.singular": "Броневик",
     "creatures.axolotl-creatures-pack.kappa.name.plural": "Каппы",
     "creatures.axolotl-creatures-pack.kappa.name.singular": "Каппа",
-    "creatures.axolotl-creatures-pack.kappaShoya.name.plural": "Каппы Шояс",
-    "creatures.axolotl-creatures-pack.kappaShoya.name.singular": "Каппа Шояс",
+    "creatures.axolotl-creatures-pack.kappaShoya.name.plural": "Каппы-Шойя",
+    "creatures.axolotl-creatures-pack.kappaShoya.name.singular": "Каппа-Шойя",
     "creatures.axolotl-creatures-pack.lionman.name.plural": "Львы-Берсерки",
     "creatures.axolotl-creatures-pack.lionman.name.singular": "Лев-Берсерк",
     "creatures.axolotl-creatures-pack.mountainGiant.name.plural": "Горные великаны",
     "creatures.axolotl-creatures-pack.mountainGiant.name.singular": "Горный великан",
-    "creatures.axolotl-creatures-pack.owlkin.name.plural": "Совята",
-    "creatures.axolotl-creatures-pack.owlkin.name.singular": "Совёнок",
-    "creatures.axolotl-creatures-pack.owlkinSage.name.plural": "Мудрые совята",
-    "creatures.axolotl-creatures-pack.owlkinSage.name.singular": "Мудрый совёнок",
-    "creatures.axolotl-creatures-pack.roper.name.plural": "Роперы",
-    "creatures.axolotl-creatures-pack.roper.name.singular": "Ропер",
+    "creatures.axolotl-creatures-pack.owlkin.name.plural": "Совы",
+    "creatures.axolotl-creatures-pack.owlkin.name.singular": "Сова",
+    "creatures.axolotl-creatures-pack.owlkinSage.name.plural": "Мудрые совы",
+    "creatures.axolotl-creatures-pack.owlkinSage.name.singular": "Мудрая сова",
+    "creatures.axolotl-creatures-pack.roper.name.plural": "Канаты",
+    "creatures.axolotl-creatures-pack.roper.name.singular": "Канат",
     "creatures.axolotl-creatures-pack.scorpohand.name.plural": "Руки-Скорпионы",
     "creatures.axolotl-creatures-pack.scorpohand.name.singular": "Рука-Скорпион",
-    "creatures.axolotl-creatures-pack.sellsword.name.plural": "Торговецы мечами",
-    "creatures.axolotl-creatures-pack.sellsword.name.singular": "Торговец мечами",
-    "creatures.axolotl-creatures-pack.serpentine.name.plural": "Змееголовы",
-    "creatures.axolotl-creatures-pack.serpentine.name.singular": "Змееголов",
-    "creatures.axolotl-creatures-pack.serpentineAlpha.name.plural": "Альфа змееголовы",
-    "creatures.axolotl-creatures-pack.serpentineAlpha.name.singular": "Альфа змееголов",
+    "creatures.axolotl-creatures-pack.sellsword.name.plural": "Наймиты",
+    "creatures.axolotl-creatures-pack.sellsword.name.singular": "Наймит",
+    "creatures.axolotl-creatures-pack.serpentine.name.plural": "Змеевидные",
+    "creatures.axolotl-creatures-pack.serpentine.name.singular": "Змеевидный",
+    "creatures.axolotl-creatures-pack.serpentineAlpha.name.plural": "Альфа змеевидные",
+    "creatures.axolotl-creatures-pack.serpentineAlpha.name.singular": "Альфа змеевидный",
     "creatures.axolotl-creatures-pack.shadowLord.name.plural": "Теневые лорды",
     "creatures.axolotl-creatures-pack.shadowLord.name.singular": "Теневой лорд",
-    "creatures.axolotl-creatures-pack.sphinx.name.plural": "Ламии",
-    "creatures.axolotl-creatures-pack.sphinx.name.singular": "Ламия",
+    "creatures.axolotl-creatures-pack.sphinx.name.plural": "Верховные сфинксы",
+    "creatures.axolotl-creatures-pack.sphinx.name.singular": "Верховный сфинкс",
     "creatures.axolotl-creatures-pack.stoneCollossus.name.plural": "Каменные колоссы",
     "creatures.axolotl-creatures-pack.stoneCollossus.name.singular": "Каменный колосс",
     "creatures.axolotl-creatures-pack.stoneLord.name.plural": "Каменные Лорды",
     "creatures.axolotl-creatures-pack.stoneLord.name.singular": "Каменные Лорд",
     "creatures.axolotl-creatures-pack.swampDragon.name.plural": "Болотные драконы",
     "creatures.axolotl-creatures-pack.swampDragon.name.singular": "Болотный дракон",
-    "creatures.axolotl-creatures-pack.tentoslimus.name.plural": "Тентослимусы",
-    "creatures.axolotl-creatures-pack.tentoslimus.name.singular": "Тентослимус",
-    "creatures.axolotl-creatures-pack.tortofroid.name.plural": "Черепахи",
-    "creatures.axolotl-creatures-pack.tortofroid.name.singular": "Черепаха",
+    "creatures.axolotl-creatures-pack.tentoslimus.name.plural": "Зубастые слизни",
+    "creatures.axolotl-creatures-pack.tentoslimus.name.singular": "Зубастый слизень",
+    "creatures.axolotl-creatures-pack.tortofroid.name.plural": "Злые черепахи",
+    "creatures.axolotl-creatures-pack.tortofroid.name.singular": "Злая черепаха",
     "creatures.axolotl-creatures-pack.urox.name.plural": "Уроксы",
     "creatures.axolotl-creatures-pack.urox.name.singular": "Урокс",
     "creatures.axolotl-creatures-pack.veninScorpohand.name.plural": "Ядовитые руки-скорпионы",
@@ -81,8 +81,8 @@
     "creatures.axolotl-creatures-pack.wyrmFish.name.singular": "Рыба-змей",
     "creatures.axolotl-creatures-pack.yeti.name.plural": "Йети",
     "creatures.axolotl-creatures-pack.yeti.name.singular": "Йети",
-    "creatures.axolotl-creatures-pack.zombieHigh.name.plural": "Непрощённые",
-    "creatures.axolotl-creatures-pack.zombieHigh.name.singular": "Непрощённый",
+    "creatures.axolotl-creatures-pack.zombieHigh.name.plural": "Одержимые зомби",
+    "creatures.axolotl-creatures-pack.zombieHigh.name.singular": "Одержимый зомби",
     "creatures.axolotl-creatures-pack.zombieLow.name.plural": "Мстительные мертвецы",
     "creatures.axolotl-creatures-pack.zombieLow.name.singular": "Мстительный мертвец",
     "mapObject.axolotl-creatures-pack.creatureGeneratorCommon.acpAshTree.name": "Ясень",
